@@ -9,7 +9,7 @@ sig
   val name: unit -> string
   val welcome: unit -> string
   val init: bool -> bool -> Path.T -> string -> bool -> string -> (string * string) list ->
-    string -> string * string -> bool -> unit
+    (Path.T * Path.T) list -> string -> string * string -> bool -> unit
   val finish: unit -> unit
   val protocol_handler: string -> unit
   val init_protocol_handlers: unit -> unit
@@ -33,7 +33,7 @@ fun welcome () =
 
 (* init *)
 
-fun init build info info_path doc doc_graph doc_output doc_variants
+fun init build info info_path doc doc_graph doc_output doc_variants doc_files
     parent (chapter, name) verbose =
   if #name (! session) <> parent orelse not (! session_finished) then
     error ("Unfinished parent session " ^ quote parent ^ " for " ^ quote name)
@@ -43,7 +43,7 @@ fun init build info info_path doc doc_graph doc_output doc_variants
       val _ = session_finished := false;
     in
       Present.init build info info_path (if doc = "false" then "" else doc)
-        doc_graph doc_output doc_variants (chapter, name)
+        doc_graph doc_output doc_variants doc_files (chapter, name)
         verbose (map Thy_Info.get_theory (Thy_Info.get_names ()))
     end;
 
